--- a/src/components/modules/stepper/stepper.module.css
+++ b/src/components/modules/stepper/stepper.module.css
@@ -1,13 +1,10 @@
 
 .stepper_bg {
-  width: 100%;
-  background-color: #f8f9fa; /* A light, neutral background */
-  padding: 2rem 0;
+  margin-top: 100px;
   border-bottom: 1px solid #e9ecef;
 }
 
 .stepper {
-  max-width: 700px;
   margin: 0 auto;
   padding: 0 1rem;
   display: flex;
