--- a/src/components/templates/index/promote/promote.module.css
+++ b/src/components/templates/index/promote/promote.module.css
@@ -4,10 +4,11 @@
   padding: 4rem 0; /* Add vertical spacing */
   background-color: var(--bg-light);
   direction: rtl; /* Set RTL direction for the whole component */
+
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1380px;
   margin: 0 auto;
   padding: 0 20px;
   display: flex;
@@ -142,7 +143,7 @@
 }
 
 .why_coffee .red_btn {
-  background-color: var(--accent-color);
+  background-color: #1e2b38;
   border-color: var(--accent-color);
 }
 .why_coffee .red_btn:hover {
