--- a/src/components/templates/login-register/login.module.css
+++ b/src/components/templates/login-register/login.module.css
@@ -45,7 +45,7 @@
   -webkit-backdrop-filter: blur(25px) saturate(180%);
   padding: 25px 20px; /* پدینگ افقی کمتر برای موبایل */
   width: 100%; /* عرض کامل در موبایل */
-  max-width: 380px; /* حداکثر عرض برای جلوگیری از کشیدگی */
+  max-width: 320px; /* حداکثر عرض برای جلوگیری از کشیدگی */
   border-radius: 20px;
   border: 1px solid rgba(255, 255, 255, 0.25);
   box-shadow: 0 15px 60px rgba(0, 0, 0, 0.25),
@@ -100,7 +100,7 @@
 
 .input {
   width: 100%;
-  padding: 14px 12px;
+  padding: 14px 2px;
   background: rgba(255, 255, 255, 0.15);
   border: 1px solid rgba(255, 255, 255, 0.25);
   border-radius: 12px;
@@ -252,6 +252,10 @@
   font-size: 14px;
   color: rgba(255, 255, 255, 0.85);
   text-align: center;
+}
+.btn_light {
+  border-radius: 20px;
+  height: 40px;
 }
 
 /* =================================== */
