--- a/src/components/templates/index/banner/Banner.module.css
+++ b/src/components/templates/index/banner/Banner.module.css
@@ -15,7 +15,7 @@
 }
 .mySwiper {
   width: 100%;
-  height: 850px;
+  height: 100%;
 }
 
 @media (max-width: 1024px) {
@@ -48,10 +48,15 @@
   .bannerContainer {
     margin-top:90px ;
     height: 380px;
+
   }
   .mySwiper {
   width: 100%;
   height: 380px;
+  object-fit:contain;
+
+
 }
+
   
 }
